--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,35 +6,15 @@
     <!-- User Filter Box -->
     <div class="filter-box">
       <h2>User Filter</h2>
-      <input
-        type="text"
-        placeholder="Filter Users"
-        (input)="filterUsers($event)"
-      />
-      <div
-        *ngFor="let user of filteredUsers"
-        class="user-box"
-        style="height: 80px;"
-      >
-        <p>{{ user.name }} - {{ user.department }}</p>
-      </div>
+      <input type="text" placeholder="Filter Users" (input)="filterUsers($event)" />
+
     </div>
 
     <!-- Department Filter Box -->
     <div class="filter-box">
       <h2>Department Filter</h2>
-      <input
-        type="text"
-        placeholder="Filter Departments"
-        (input)="filterDepartments($event)"
-      />
-      <div
-        *ngFor="let department of filteredDepartments"
-        class="department-box"
-        style="height: 80px;"
-      >
-        <p>{{ department }}</p>
-      </div>
+      <input type="text" placeholder="Filter Departments" (input)="filterDepartments($event)" />
+
     </div>
   </div>
 
